# r2db2

./: .gitignore  Cargo.toml  foo.csv  history.txt  locustfile.py
lib/: test_db.sqlite
lib/buffer/: CONFIG.md  Cargo.toml
lib/buffer/src/: alloc.rs  lib.rs  manager.rs
lib/buffer/src/replacer/: lfu.rs  lru.rs  lru_k.rs  mod.rs  mru.rs
lib/catalog/: Cargo.toml
lib/catalog/src/: column.rs  lib.rs  schema.rs
lib/cli/: Cargo.toml
lib/cli/src/: lib.rs  tui.rs
lib/common/: Cargo.toml
lib/common/src/: config.rs  lib.rs  rid.rs
lib/common/src/traits/: emit.rs  encode.rs  mod.rs
lib/common/src/util/: mod.rs  time.rs  trace.rs
lib/compile/: Cargo.toml
lib/compile/src/: diagnostics.rs  lexer.rs  lib.rs  parser.rs
lib/concurrency/: Cargo.toml
lib/concurrency/src/: transaction.rs
lib/driver/: Cargo.toml
lib/driver/src/: lib.rs
lib/driver/src/shell/: highlighter.rs  mod.rs  prompt.rs
lib/execution/: Cargo.toml
lib/execution/src/: experimental.rs  lib.rs
lib/metrics/: Cargo.toml  DESIGN.md
lib/metrics/src/: collector.rs  lib.rs  manager.rs  metric.rs  prof.rs
lib/metrics/src/collector/: cpu.rs  memory.rs  mod.rs
lib/network/: Cargo.toml  PROTOCOL.md
lib/network/src/: lib.rs  protocol.rs
lib/network/src/auth/: password.rs  token.rs
lib/network/src/client/: mod.rs
lib/network/src/middleware/: mod.rs  trace.rs
lib/network/src/protocol/: handler.rs  message.rs  mod.rs
lib/network/src/server/: mod.rs  tcp.rs  udp.rs
lib/parser/: Cargo.toml
lib/parser/src/: lib.rs
lib/storage/: Cargo.toml
lib/storage/benches/: disk_manager_bench.rs
lib/storage/src/: lib.rs
lib/storage/src/disk/: manager.rs  mod.rs  scheduler.rs
lib/storage/src/index/: b_plus_tree.rs  generic_key.rs  index.rs  iterator.rs  manager.rs  mod.rs  stats.rs
lib/storage/src/lsm/block/: mod.rs
lib/storage/src/page/: mod.rs  page.rs
lib/storage/src/page/b_plus_tree/: header.rs  internal.rs  leaf.rs  mod.rs  tree.rs
lib/storage/src/page/extendible_hash/: mod.rs
lib/storage/src/slotted_page/: mod.rs
lib/storage/src/table/: tuple.rs
lib/ty/: Cargo.toml  README.md
lib/ty/src/: lib.rs  value.rs
testdata/: employee.csv
