[package]
name = "catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ty = { path = "../ty" }


anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
getset = "0.1.2"
typed-builder = "0.18.0"
tracing = "0.1.40"
dashmap = "5.5.3"

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
