[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shrinkwraprs = "0.3.0"
tracing = "0.1.40"
anyhow = "1.0.40"
thiserror = "1.0.30"
chrono = "0.4.19"
