[package]
name = "compile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.40.0"
logos = "0.13.0"
thiserror = "1.0.51"
codespan-reporting = "0.11.1"
anyhow = "1.0.75"

[dev_dependencies]
pretty_assertions_sorted = "1.2.3"
