[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
parking_lot = "0.12.1"
tracing = "0.1.40"
getset = "0.1.2"
typed-builder = "0.18.0"
thiserror = "1.0.30"
anyhow = "1.0.40"
