[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buffer = { path = "../buffer" }
common = { path = "../common" }
storage = { path = "../storage" }
catalog = { path = "../catalog" }
execution = { path = "../execution" }

tracing = "0.1.40"
anyhow = "1.0.75"
thiserror = "1.0.51"
dashmap = "5.5.3"
tokio = { version = "1.11.0", features = ["full"] }
getset = "0.1.2"
typed-builder = "0.18.0"
rand = "0.8.5"
