[package]
name = "metrics"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
pyroscope_pprofrs = "0.2.7"
anyhow = "1.0"
pyroscope = "0.5.7"
dashmap = "5.5.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
async-trait = "0.1.74"
