[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "../cli" }
common = { path = "../common" }

tokio = { version = "1.35.0", features = ["full"] }
bytes = "1.5.0"
tracing = "0.1.40"
get_if_addrs = "0.5.3"
