[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "../cli" }
common = { path = "../common" }
driver = { path = "../driver" }


tokio = { version = "1.35.0", features = ["full"] }
bytes = "1.5.0"
tracing = "0.1.40"
bcrypt = "0.15.0"
get_if_addrs = "0.5.3"
anyhow = "1.0.75"
jsonwebtoken = "9.2.0"
thiserror = "1.0.51"
getset = "0.1.2"
typed-builder = "0.18.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dashmap = "5.5.3"
rustc-hash = "1.1.0"
