[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "1.0.75"
parking_lot = "0.12.1"
rand = "0.8.5"
thiserror = "1.0.50"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.35.0", features = ["full"] }
shrinkwraprs = "0.3.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
getset = "0.1.2"
typed-builder = "0.18.0"
once_cell = "1.19.0"

[dev-dependencies]
criterion = "0.5.1"
