[package]
name = "ty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
rust_decimal = "1.33.1"
thiserror = "1.0.50"
anyhow = "1.0.75"
typed-builder = "0.18.0"
tracing = "0.1.40"
